tests/NormalTests/paczka1/small_fuzzy/28855112.err
Error in line 1: LcobR S334 36¯8
Error in line 4: S170 S906 68,1
Error in line 6: S170 A872 72,4
Error in line 9: AqgD S906 0,65
Error in line 12: aS58dV S906 91,2
